# makefile.am for ppi
#

bin_PROGRAMS = ppi

SRCS =	ADIABLWC.f	ANLYTIC.f	ARC.f		ASDPMD.f \
	ATTEN.f 	AZLIM.f 	BSCN.f		CALIB.f \
	COLTAB.f	CONFILL1.f	CONFILL2.f	CONLEV.f \
	CONTUR.f	CONVERT.f	COORD.f		COPWIN.f \
	CORANG.f	CORRNG.f	COSWIND.f	CSUBN.f \
	DELETE.f	DESPIKE.f	DFDA.f		DFDR.f \
	DIPS.f		DISP.f		DLINE.f		DMPCHAR.f \
	DMPFLOAT.f	DMPINTGR.f	DUMP.f		THERMO.f \
	F.f		FAREA.f		FFREC.f		FFT.f \
	FIELD.f		FLDIDFF.f	FLDIDHR.f	FLDIDUF.f \
	FUNC.f		FXSWATH.f	G.f		GETACT.f \
	GETCAL.f	GETHRD.f	GETLEN.f	GETMRK.f \
	GETTIME.f	HDR.f		HTOPO.f		IFBAD.f \
	IFIND.f		IFNDCOL.f 	IFNOBAD.f	INIT1.f \
	INPUT1.f	INSIDE.f	INTEGR.f	LABCOL.f \
	LABCOLWIN.f	LABEL.f		LABEL1.f	LABEL2.f \
	LABEL3.f	LABELS.f	LABELWIN.f	LABTIM.f \
	LINEAR.f	LL2XY.f		LL2XYDRV.f	LOBES.f \
	LOGTEN.f	LSQRFIL.f	LWC_DZ.f	MAJMIN.f \
	MNMX.f		MYFRAME.f 	MYGRID.f	MYTITLE.f \
	NORMAL.f	ORELSE.f	OUTSIDE.f 	PLTACT.f \
	PLTANGL.f	PLTGRD.f	PLTHIST.f	PLTMRK.f \
	PLTRNGE.f 	PLTSCAN.f	PLTSCAT.f	PLTSPEC.f \
	PLTSWAT.f	PLTVAD.f	PLTVEC.f 	POWER.f \
	PPIWIN.f	PPI_MMM.f	PRLASTFF.f	PRLASTUF.f \
	PRVOLMFF.f 	RANDOM.f	RANF.f		RDFF.f \
	RDHDR.f		RDHRD.f 	RDUF.f		REC.f \
	REFLECT.f 	RESETBG.f	RFFT.f		RHIWIN.f \
	RNGLIM.f 	RNGST.f		ROTATE.f	SAVANGL.f \
	SAVFUN.f 	SAVHIST.f 	SAVPLT.f	SAVRNGE.f \
	SAVSCAN.f 	SAVSCAT.f	SAVSPEC.f	SAVVAD.f \
	SAVVEC.f 	SCANERR.f	SETCOL.f	SETLIN.f \
	SETLWC.f 	SETWIN.f	SIGPOW.f	SMOOTH.f \
	SMSPCT.f 	SMTH2D.f	SNR.f		SPAL.f \
	SPQUAD.f 	STDEV.f		STORE.f		SUMDB.f \
	SUMFLD.f 	SURWIN.f	SWATH.f		SWAP16.f \
	TAPER.f 	TENLOG.f	TERP.f		THRESH.f \
	UFREC.f 	UFSPEC.f	UFWRITE.f	UNFOLD.f \
	UNPCK.f 	VAD.f		VECTORS.f	VEC_DIR.f \
	VEC_MAG.f 	VUNF.f		WINTGR.f	XTREMA.f \
	XVCOR.f 	XY2LL.f		XY2LLDRV.f	ZSLAB.f \
	pcpfactor.f 	turbalg.f	varcrv.f 	CEILING.f \
	FLOOR.f 	SMTH1D.f	PLT_TS.f	RDLIDAR.f \
	FLDIDLID.f 	TOPO.f		DETRND.f	PRNTFLD.f \
	EPSILON.f 	PRODFLD.f	DIVFLD.f 	LABCOL_NON.f \
	DOREC.f 	FLDIDDO.f	RDDO.f		RA_SHFT.f \
	R_SHFT.f 	AREA.f		PLOTBOX.f	PLOTAREA.f \
	INITAREA.f 	CORRANA.f 	DECLUTTER.f	SAVSWTH.f \
	AVRAGE.f 	PLTAE.f		PLT_RGLOC.f 	VADCOVI.f \
	VADCOVF.f 	VADFLD.f	RADVEL.f	MACHSIZ.f \
	PLTPROJ.f 	ETA.f		SAVLIST.f	LISTFLD.f \
	FLDIDNEX.f 	RDNEXRAD.f 	VERDATE.f	CONDAVG.f \
	TSTCOL.f 	SETGRAY.f	SETGRID.f 	ccosin.c \
	cdate.c 	cinitcos.c	sunfor.c	getlidar.c \
	GRIDACT.f 	FINDSTRING.f	TEXTBOX.f	USTOPO.f \
	topo.c		ELTOPO.f	MAXIMUM.f	MINIMUM.f \
	UVD_STD.f 	rdrec.c		dorade.c	nexrad.c \
	LAT_LON.f 	USRORIGIN.f	PLTNET.f        PLT_CLOCK.f \
	PLT_PERCENT.f 	GAM_DSD.f	GETNLD.f	PLTNLD.f \
        DBZ_DBM.f 	GETLMA.f	PLTLMA.f	GRAD.f \
	GETSND.f 	SOUND.f 	VT_DBZ.f	myio.c \
	COR_RA.f        LSTSQR.f	ABSVAL.f        COMPLX_CHAR \
        GRID_BOX.f	SETBCKGRND.f	WSPEC.f		PLTHZ.f \
	LABLBOX

# compile flags

AM_CFLAGS = -I.
AM_CFLAGS += -I../../../include
AM_CFLAGS += -I$(prefix)/include
AM_CFLAGS += -I/usr/include
AM_CFLAGS += -g -O0

AM_FFLAGS = $(AM_CFLAGS)
AM_FFLAGS += -std=legacy
AM_FFLAGS += -fno-range-check
AM_FFLAGS += -fsecond-underscore
AM_FFLAGS += $(NETCDFINCS)

# link flags

AM_LDFLAGS = -L.
AM_LDFLAGS += -L../../../lib
AM_LDFLAGS += -L$(prefix)/lib
AM_LDFLAGS += -Wl,-rpath=$(prefix)/lib

ppi_SOURCES = $(SRCS)

